# sdl2cpp-direct

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/celtre_software/sdl2cpp_direct/: subsystems.hpp
